Set up swagger and add react query prefetching
